# regex

./: .gitignore  CMakeLists.txt  README.md  make-single-include.sh  testfile.cpp
bench/: CMakeLists.txt  compare_long.cpp  cstropt.cpp  long_cstr.cpp  long_list.cpp  long_sv.cpp  rtbuild.cpp  simple.cpp  twain.cpp
docs/: news.md  synopsis.md  syntax.md
include/rx/: captures.hpp  cdarray.hpp  charclass.hpp  error.hpp  regex.h  regex.hpp  tnfa.hpp  tok.hpp  tree.hpp  util.hpp
include/rx/api/: ranges.hpp  regex_error.hpp  replace.hpp  static_regex.hpp  submatch.hpp
include/rx/ast/: capstack.hpp  charclass.hpp  parser.tpp  tok.hpp  tree.hpp  tree.tpp
include/rx/etc/: bitcharset.hpp  captures.hpp  cdarray.hpp  charset.hpp  error.hpp  partition.hpp  static_charset.hpp  static_span.hpp  string_literal.hpp  util.hpp  vec_bool_adaptor.hpp
include/rx/fsm/: flags.hpp  minimise.tpp  regoptimise.tpp  tdfa.hpp  tdfa.tpp  tdfa_impl.tpp  tdfa_opt.tpp  tnfa.hpp  tnfa.tpp
single-include/rx/: regex.hpp
src/rx/: rx.cpp
src/rx/ast/: captures.cpp  charclass.cpp  tok.cpp  tree.cpp
src/rx/fsm/: fsm.cpp  tdfa.cpp  tnfa.cpp
src/rx/util/: captures.cpp  cdarray.cpp  error.cpp  partition.cpp  util.cpp
tests/: CMakeLists.txt  _testfile.cpp  bset_test.cpp  cset_test.cpp  expo_test.cpp  iter_test.cpp  part_test.cpp  repl_test.cpp  setb_test.cpp  setc_test.cpp  srx1_test.cpp  srx2_test.cpp  srxc_test.cpp  srxf_test.cpp  srxn_test.cpp  tdfa_test.cpp  tnfa_test.cpp  tree_test.cpp
tests/headers/: dump_tdfa.hpp  graph_export.hpp  pattern_to_string.hpp  printable_tdfa.hpp  printable_tree.hpp  tdfa_matcher.hpp  tnfa_matcher.hpp  tree_matcher.hpp
tests/util/: all.cpp  printable_tree.cpp  printable_tree.hpp  tdfa_matcher.cpp  tnfa_matcher.cpp  tnfa_matcher.hpp  tree_matcher.cpp  tree_matcher.hpp
tools/: CMakeLists.txt  amalgamate.cpp
trace/: CMakeLists.txt  compile_stub.cpp  profile_target.cpp
