project(rx-bench)

find_package(benchmark REQUIRED)
find_package(ctre REQUIRED)
find_package(re2 REQUIRED)
find_package(Boost REQUIRED)
find_package(pcre2 OPTIONAL)

add_executable(bench-simple)
target_sources(bench-simple PRIVATE simple.cpp)
target_compile_options(bench-simple PRIVATE -march=native)
target_link_libraries(bench-simple PRIVATE rx benchmark::benchmark)
set_target_properties(bench-simple PROPERTIES FOLDER benchmarks)

add_executable(bench-long-cstr)
target_sources(bench-long-cstr PRIVATE long_cstr.cpp)
target_compile_options(bench-long-cstr PRIVATE -Wno-c23-extensions -march=native)
target_link_libraries(bench-long-cstr PRIVATE rx benchmark::benchmark)
set_target_properties(bench-long-cstr PROPERTIES FOLDER benchmarks)

add_executable(bench-long-list)
target_sources(bench-long-list PRIVATE long_list.cpp)
target_compile_options(bench-long-list PRIVATE -Wno-c23-extensions -march=native)
target_link_libraries(bench-long-list PRIVATE rx benchmark::benchmark)
set_target_properties(bench-long-list PROPERTIES FOLDER benchmarks)

add_executable(bench-long-sv)
target_sources(bench-long-sv PRIVATE long_sv.cpp)
target_compile_options(bench-long-sv PRIVATE -Wno-c23-extensions -march=native)
target_link_libraries(bench-long-sv PRIVATE rx benchmark::benchmark)
set_target_properties(bench-long-sv PROPERTIES FOLDER benchmarks)

add_executable(bench-rtbuild)
target_sources(bench-rtbuild PRIVATE rtbuild.cpp)
target_compile_options(bench-rtbuild PRIVATE -O0)
target_link_libraries(bench-rtbuild PRIVATE rx benchmark::benchmark)
set_target_properties(bench-rtbuild PROPERTIES FOLDER benchmarks)

add_executable(bench-cstropt)
target_sources(bench-cstropt PRIVATE cstropt.cpp)
target_compile_options(bench-cstropt PRIVATE -Wno-c23-extensions -march=native)
target_link_libraries(bench-cstropt PRIVATE rx benchmark::benchmark)
set_target_properties(bench-cstropt PROPERTIES FOLDER benchmarks)

add_executable(bench-compare-long)
target_sources(bench-compare-long PRIVATE compare_long.cpp)
target_compile_options(bench-compare-long PRIVATE -Wno-c23-extensions -march=native)
target_link_libraries(bench-compare-long PRIVATE rx benchmark::benchmark re2::re2 pcre2-8)
set_target_properties(bench-compare-long PROPERTIES FOLDER benchmarks)